kubernetes/apps/desktop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: desktop
spec:
  selector:
    app: webtop
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
