kubernetes/apps/desktop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop
  namespace: desktop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - desktop.test.tuntelder.com
      secretName: desktop-tls
  rules:
    - host: desktop.test.tuntelder.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webtop
                port:
                  number: 80
